--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@vercel/speed-insights": "^1.3.1",
     "better-auth": "^1.4.0",
     "framer-motion": "^11.15.0",
     "next": "^16.1.1",
