feat: session cleanup and dashboard recovery fixes   - Add SessionCleanupMiddleware to prevent connection leaks   - Implement explicit session.close() in chat endpoint   - Add 60-second frontend timeout for hung connections   - Add dashboard refresh button   - Fix TypeScript import for ChatMessage   - Centralize API URL configuration for Vercel deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,5 +9,14 @@ BETTER_AUTH_SECRET=your-secret-key-min-32-characters
 # Get your connection string from: https://console.neon.tech
 DATABASE_URL=postgresql://user:pass@your-neon-host.neon.tech/dbname
 
+# Google Gemini API Configuration (via OpenAI Agents SDK)
+# Get your API key from: https://aistudio.google.com/app/apikey
+# CRITICAL: Uses OpenAI-compatible endpoint with /openai/ suffix
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
+GEMINI_MODEL=gemini-2.0-flash
+GEMINI_TIMEOUT=5
+GEMINI_MAX_RETRIES=3
+
 # CORS Configuration
-CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
