--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -5,8 +5,9 @@
 # Generate with: openssl rand -base64 32
 BETTER_AUTH_SECRET=your-secret-key-min-32-characters
 
-# API Base URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
-
 # Better Auth Configuration
 BETTER_AUTH_URL=http://localhost:3000
+
+# Backend API URL
+# All AI processing happens on the backend via Gemini SDK
+NEXT_PUBLIC_API_URL=http://localhost:8000
