--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,8 @@ python-dotenv>=1.0.0
 psycopg2-binary>=2.9.9
 passlib[bcrypt]>=1.7.4
 bcrypt<4.2.0  # Pin to <4.2.0 for passlib compatibility
+openai>=1.0.0  # AsyncOpenAI client for Gemini endpoint
+openai-agents>=0.1.0  # OpenAI Agents SDK for agent orchestration
+fastmcp>=0.1.0  # Official MCP SDK for tool definitions
+tenacity>=8.0.0  # Retry logic with exponential backoff
+alembic>=1.13.0  # Database migrations
